USB3.0:DTS:EC-SBC-IMX8M: Add USB3.0 port0 support
      Enable USB 3.0 port 0(bottom of two)

Signed-off-by: eric.wu <wsrosicky@163.com>

--- a/arch/arm64/boot/dts/freescale/em-sbc-imx8m.dts
+++ b/arch/arm64/boot/dts/freescale/em-sbc-imx8m.dts
@@ -625,6 +625,20 @@
 	status = "okay";
 };
 
+&usb3_phy0 {
+       status = "okay";
+};
+
+&usb3_0 {
+       status = "okay";
+};
+
+&usb_dwc3_0 {
+       /delete-property/ power-domains;
+	status = "okay";
+	dr_mode = "host";
+};
+
 &usb3_phy1 {
 	status = "okay";
 };
