--- a/arch/arm64/boot/dts/freescale/maaxboard-mini.dts
+++ b/arch/arm64/boot/dts/freescale/maaxboard-mini.dts
@@ -53,6 +53,25 @@
 		compatible = "mmc-pwrseq-simple";
 		reset-gpios = <&gpio2 19 GPIO_ACTIVE_LOW>;      /* WL_REG_ON */
 	};
+
+    gpio_keys {
+        compatible = "gpio-keys";
+        pinctrl-names = "default";
+        pinctrl-0 = <&pinctrl_gpio_keys>;
+
+        home {
+            label = "home Button";
+            gpios = <&gpio3 15 GPIO_ACTIVE_LOW>;
+            linux,code = <KEY_HOMEPAGE>;
+            wakeup-source;
+        };
+
+        back {
+            label = "back Button";
+            gpios = <&gpio3 1 GPIO_ACTIVE_LOW>;
+            linux,code = <KEY_BACK>;
+        };
+	};
 };
 
 &clk {
@@ -67,6 +86,13 @@
 		pinctrl_hog: hoggrp {
 			fsl,pins = <
 				MX8MM_IOMUXC_GPIO1_IO12_GPIO1_IO12      0x02
+			>;
+		};
+
+        pinctrl_gpio_keys: gpio_keysgrp {
+			fsl,pins = <
+				MX8MM_IOMUXC_NAND_RE_B_GPIO3_IO15   0x144
+				MX8MM_IOMUXC_NAND_CE0_B_GPIO3_IO1   0x144
 			>;
 		};
 
