--- a/arch/arm64/configs/maaxboard_mini_defconfig
+++ b/arch/arm64/configs/maaxboard_mini_defconfig
@@ -489,6 +489,7 @@ CONFIG_DRM_PANEL_ILITEK_ILI9881C=y
 CONFIG_DRM_NXP_SEIKO_43WVFIG=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_ITE_IT6263=y
+CONFIG_DRM_LONTIUM_LT2911=y
 CONFIG_DRM_IMX_PARALLEL_DISPLAY=y
 CONFIG_DRM_IMX_TVE=y
 CONFIG_DRM_IMX_LDB=y
