--- a/arch/arm64/boot/dts/freescale/maaxboard-mini.dts
+++ b/arch/arm64/boot/dts/freescale/maaxboard-mini.dts
@@ -22,7 +22,7 @@
 
 	chosen {
 		bootargs = "console=ttymxc1,115200 earlycon=ec_imx6q,0x30890000,115200";
-		stdout-path = &uart2;
+		stdout-path = &uart1;
 	};
 
 	regulators {
@@ -113,6 +113,13 @@
 		pinctrl_pmic: pmicirq {
 			fsl,pins = <
 				MX8MM_IOMUXC_GPIO1_IO03_GPIO1_IO3   0x41
+			>;
+		};
+
+		pinctrl_uart1: uart1grp {
+			fsl,pins = <
+				MX8MM_IOMUXC_UART1_RXD_UART1_DCE_RX	0x140
+				MX8MM_IOMUXC_UART1_TXD_UART1_DCE_TX	0x140
 			>;
 		};
 
@@ -371,7 +378,13 @@
 	};
 };
 
-&uart2 { /* console */
+&uart1 { /* console */
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_uart1>;
+	status = "okay";
+};
+
+&uart2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart2>;
 	status = "okay";
