Camera:DTS:MAAXBOARD_MINI: Add OV5640 Camera Support
        Enable mipi_csi and csi1_bridge
        Add ov5640_mipi node in the I2C1

--- a/arch/arm64/boot/dts/freescale/maaxboard-mini.dts
+++ b/arch/arm64/boot/dts/freescale/maaxboard-mini.dts
@@ -117,7 +117,7 @@
 			>;
 		};
 
-        pinctrl_gpio_keys: gpio_keysgrp {
+		pinctrl_gpio_keys: gpio_keysgrp {
 			fsl,pins = <
 				MX8MM_IOMUXC_NAND_RE_B_GPIO3_IO15   0x144
 				MX8MM_IOMUXC_NAND_CE0_B_GPIO3_IO1   0x144
@@ -259,6 +259,19 @@
 				MX8MM_IOMUXC_ENET_RX_CTL_ENET1_RGMII_RX_CTL	0x91
 				MX8MM_IOMUXC_ENET_TX_CTL_ENET1_RGMII_TX_CTL	0x1f
 				MX8MM_IOMUXC_GPIO1_IO07_GPIO1_IO7	0x19
+			>;
+		};
+
+		pinctrl_csi_pwn: csi_pwn_grp {
+			fsl,pins = <
+				MX8MM_IOMUXC_SAI5_RXD1_GPIO3_IO22		0x19
+			>;
+		};
+
+		pinctrl_csi_rst: csi_rst_grp {
+			fsl,pins = <
+				MX8MM_IOMUXC_SAI5_RXD0_GPIO3_IO21		0x19
+				MX8MM_IOMUXC_GPIO1_IO14_CCMSRCGPCMIX_CLKO1	0x59
 			>;
 		};
 	};
@@ -404,6 +417,30 @@
 			};
 		};
 	};
+
+	ov5640_mipi: ov5640_mipi@3c {
+		compatible = "ovti,ov5640_mipi";
+		reg = <0x3c>;
+		status = "okay";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_csi_pwn>, <&pinctrl_csi_rst>;
+		clocks = <&clk IMX8MM_CLK_CLKO1_DIV>;
+		clock-names = "csi_mclk";
+		assigned-clocks = <&clk IMX8MM_CLK_CLKO1_SRC>,
+				  <&clk IMX8MM_CLK_CLKO1_DIV>;
+		assigned-clock-parents = <&clk IMX8MM_CLK_24M>;
+		assigned-clock-rates = <0>, <24000000>;
+		csi_id = <0>;
+		pwn-gpios = <&gpio3 22 GPIO_ACTIVE_HIGH>;
+		rst-gpios = <&gpio3 21 GPIO_ACTIVE_HIGH>;
+		mclk = <24000000>;
+		mclk_source = <0>;
+		port {
+			ov5640_mipi1_ep: endpoint {
+				remote-endpoint = <&mipi1_sensor_ep>;
+			};
+		};
+	};
 };
 
 &uart1 { /* console */
@@ -537,6 +574,36 @@
 			at803x,led-act-blind-workaround;
 			at803x,eee-okay;
 			at803x,vddio-1p8v;
+		};
+	};
+};
+
+&csi1_bridge {
+	fsl,mipi-mode;
+    /*fsl,two-8bit-sensor-mode;*/
+	status = "okay";
+	port {
+		csi1_ep: endpoint {
+			remote-endpoint = <&csi1_mipi_ep>;
+		};
+	};
+};
+
+&mipi_csi_1 {
+	#address-cells = <1>;
+	#size-cells = <0>;
+	status = "okay";
+	port {
+		mipi1_sensor_ep: endpoint1 {
+			remote-endpoint = <&ov5640_mipi1_ep>;
+			data-lanes = <2>;
+			csis-hs-settle = <13>;
+			csis-clk-settle = <2>;
+			csis-wclk;
+		};
+
+		csi1_mipi_ep: endpoint2 {
+			remote-endpoint = <&csi1_ep>;
 		};
 	};
 };
