USB:DTS:MAAXBOARD_MINI: Add USB support and USB device support
	add USB support, default dts support all usb host.
	add usb device dts file, 3 usb host and 1 usb device

Signed-off-by: eric.wu <wsrosicky@163.com>

--- a/arch/arm64/boot/dts/freescale/maaxboard-mini-device.dts
+++ b/arch/arm64/boot/dts/freescale/maaxboard-mini-device.dts
@@ -557,7 +557,7 @@
 };
 
 &usbotg1 {
-	dr_mode = "host";
+	dr_mode = "peripheral";
 	picophy,pre-emp-curr-control = <3>;
 	picophy,dc-vol-level-adjust = <7>;
 	status = "okay";
