config:DTS:MAAXBOARD_MINI: Synchronize maaxboard-mini.dts from the linux version
    add mipi csi ov5640 support
    add led and gpio-key
    add UART1 and change the default console to the ttymxc0
    add GPU, VPU
    modify usb0 as device mode to support ADB connection

--- a/arch/arm64/boot/dts/freescale/maaxboard-mini-android.dtsi
+++ b/arch/arm64/boot/dts/freescale/maaxboard-mini-android.dtsi
@@ -37,8 +37,19 @@
 			};
 		};
 	};
+
+};
+
+&crypto {
+       status = "disabled";
 };
 
 &wdog1 {
+	status = "okay";
+};
+
+/* make usb0 as device mode to support ADB */
+&usbotg1 {
+	dr_mode = "peripheral";
 	status = "okay";
 };
