GPIO:DTS:MaaXBoard-Nano: Update the pin settings on the 40-pins expansion interface
	Update the pin settings and add the comments to mark the correspondence
	between the PIN number and GPIO, such as the formate "/* PIN 7,  gpio14  */"

Signed-off-by: Nick <nick.cheng@avnet.com>

--- a/arch/arm64/boot/dts/freescale/overlays/Makefile
+++ b/arch/arm64/boot/dts/freescale/overlays/Makefile
@@ -12,4 +12,4 @@ dtb-y += maaxboard-nano-ext-i2c.dtbo
 dtb-y += maaxboard-nano-ext-pwm.dtbo
 dtb-y += maaxboard-nano-ext-spi.dtbo
 dtb-y += maaxboard-nano-ext-uart4.dtbo
-dtb-y += maaxboard-nano-btsco.dtbo
+dtb-y += maaxboard-nano-ext-sai3.dtbo
