--- a/arch/arm64/boot/dts/freescale/overlays/maaxboard-nano-ext-spi.dts
+++ b/arch/arm64/boot/dts/freescale/overlays/maaxboard-nano-ext-spi.dts
@@ -30,10 +30,10 @@
 			imx8mq-evk {
 				pinctrl_ecspi1: ecspi1grp {
 						fsl,pins = <
-						MX8MN_IOMUXC_ECSPI1_SCLK_ECSPI1_SCLK	0x82
-						MX8MN_IOMUXC_ECSPI1_MOSI_ECSPI1_MOSI 	0x82
-						MX8MN_IOMUXC_ECSPI1_MISO_ECSPI1_MISO	0x82
-						MX8MN_IOMUXC_ECSPI1_SS0_GPIO5_IO9		0x19
+						MX8MN_IOMUXC_ECSPI1_MOSI_ECSPI1_MOSI 	0x82 /* PIN 19,  GPIO5_IO7 */
+						MX8MN_IOMUXC_ECSPI1_MISO_ECSPI1_MISO	0x82 /* PIN 21,  GPIO5_IO8 */
+						MX8MN_IOMUXC_ECSPI1_SCLK_ECSPI1_SCLK	0x82 /* PIN 23,  GPIO5_IO6 */
+						MX8MN_IOMUXC_ECSPI1_SS0_GPIO5_IO9		0x19 /* PIN 24,  GPIO5_IO9 */
 					>;
 				};
 			};
