--- a/arch/arm64/boot/dts/freescale/overlays/maaxboard-nano-ext-gpio.dts
+++ b/arch/arm64/boot/dts/freescale/overlays/maaxboard-nano-ext-gpio.dts
@@ -30,21 +30,24 @@
 			imx8mq-evk {
 				pinctrl_hog: hoggrp {
 					fsl,pins = <
-						/*Default GPIOs*/
-						MX8MN_IOMUXC_GPIO1_IO14_GPIO1_IO14 		0x16	/* PIN 7,  GPIO 4  */
-						MX8MN_IOMUXC_SAI3_MCLK_GPIO5_IO2		0x16	/* PIN 11, GPIO 17 */
-						MX8MN_IOMUXC_SAI3_RXC_GPIO4_IO29 		0x16	/* PIN 13, GPIO 27 */
-						MX8MN_IOMUXC_SAI3_RXFS_GPIO4_IO28 		0x16	/* PIN 15, GPIO 22 */
-						MX8MN_IOMUXC_SD1_DATA6_GPIO2_IO8 		0x16	/* PIN 22, GPIO 25 */
-						MX8MN_IOMUXC_SD1_STROBE_GPIO2_IO11		0x16	/* PIN 36, GPIO 16 */
-						MX8MN_IOMUXC_SD1_DATA7_GPIO2_IO9 		0x16	/* PIN 37, GPIO 26 */
-						MX8MN_IOMUXC_SPDIF_EXT_CLK_GPIO5_IO5	0x16	/* PIN 26, GPIO 8  */
-						MX8MN_IOMUXC_GPIO1_IO15_GPIO1_IO15		0x16	/* PIN 29, GPIO 5  */
-						MX8MN_IOMUXC_GPIO1_IO01_GPIO1_IO1		0x16	/* PIN 31, GPIO 6  */
-						MX8MN_IOMUXC_SAI3_TXC_GPIO5_IO0			0x16	/* PIN 12, GPIO 18 */
-						MX8MN_IOMUXC_SAI3_TXFS_GPIO4_IO31		0x16	/* PIN 35, GPIO 19 */
-						MX8MN_IOMUXC_SAI3_RXD_GPIO4_IO30		0x16	/* PIN 38, GPIO 20 */
-						MX8MN_IOMUXC_SAI3_TXD_GPIO5_IO1			0x16	/* PIN 40, GPIO 21 */
+						MX8MN_IOMUXC_GPIO1_IO14_GPIO1_IO14		0x16	/* PIN 7,  gpio14  */
+						MX8MN_IOMUXC_SAI3_MCLK_GPIO5_IO2		0x16	/* PIN 11, gpio130 */
+						MX8MN_IOMUXC_SAI3_RXC_GPIO4_IO29		0x16	/* PIN 13, gpio125 */
+						MX8MN_IOMUXC_SAI3_RXFS_GPIO4_IO28		0x16	/* PIN 15, gpio124 */
+						MX8MN_IOMUXC_GPIO1_IO15_GPIO1_IO15		0x16	/* PIN 29, gpio15 */
+						MX8MN_IOMUXC_GPIO1_IO01_GPIO1_IO1		0x16	/* PIN 31, gpio1 */
+						MX8MN_IOMUXC_SPDIF_EXT_CLK_GPIO5_IO5	0x16	/* PIN 26, gpio133 */
+#if 0
+						/* Rev0.0 */
+						MX8MN_IOMUXC_SD1_DATA6_GPIO2_IO8		0x16	/* PIN 22, gpio40 */
+						MX8MN_IOMUXC_SD1_STROBE_GPIO2_IO11		0x16	/* PIN 36, gpio43 */
+						MX8MN_IOMUXC_SD1_DATA7_GPIO2_IO9		0x16	/* PIN 37, gpio41 */
+#else
+						/* Rev2.0 */
+						MX8MN_IOMUXC_ECSPI2_MISO_GPIO5_IO12		0x16	/* PIN 22, gpio140 */
+						MX8MN_IOMUXC_ECSPI2_SS0_GPIO5_IO13		0x16	/* PIN 36, gpio141 */
+						MX8MN_IOMUXC_ECSPI2_SCLK_GPIO5_IO10		0x16	/* PIN 37, gpio138 */
+#endif
 					>;
 				};
 			};
