--- a/arch/arm64/boot/dts/freescale/overlays/maaxboard-nano-ext-sai3.dts
+++ b/arch/arm64/boot/dts/freescale/overlays/maaxboard-nano-ext-sai3.dts
@@ -15,6 +15,7 @@
 /dts-v1/;
 /plugin/;
 
+#include <dt-bindings/clock/imx8mn-clock.h>
 #include "../imx8mn-pinfunc.h"
 
 /* 40-pin extended GPIO, expanded into SPI, I2C, PWM and other interfaces */
@@ -26,17 +27,12 @@
 		target = <&iomuxc>;
 		__overlay__ {
 			imx8mq-evk {
-				pinctrl_i2c2: i2c2grp {
+				pinctrl_sai3: sai3grp {
 					fsl,pins = <
-						MX8MN_IOMUXC_I2C2_SDA_I2C2_SDA	0x400001c3 /* PIN 3,  GPIO5_IO17 */
-						MX8MN_IOMUXC_I2C2_SCL_I2C2_SCL	0x400001c3 /* PIN 5,  GPIO5_IO16 */
-					>;
-				};
-
-				pinctrl_i2c3: i2c3grp {
-					fsl,pins = <
-						MX8MN_IOMUXC_I2C3_SDA_I2C3_SDA	0x400001c3 /* PIN 27,  GPIO5_IO19 */
-						MX8MN_IOMUXC_I2C3_SCL_I2C3_SCL	0x400001c3 /* PIN 28,  GPIO5_IO18 */
+						MX8MN_IOMUXC_SAI3_TXC_SAI3_TX_BCLK		0xd6 /* PIN 12,  GPIO5_IO0 */
+						MX8MN_IOMUXC_SAI3_TXFS_SAI3_TX_SYNC		0xd6 /* PIN 35,  GPIO4_IO31 */
+						MX8MN_IOMUXC_SAI3_RXD_SAI3_RX_DATA0		0xd6 /* PIN 38,  GPIO4_IO30 */
+						MX8MN_IOMUXC_SAI3_TXD_SAI3_TX_DATA0		0xd6 /* PIN 40,  GPIO5_IO1 */
 					>;
 				};
 			};
@@ -44,21 +40,13 @@
 	};
 
 	fragment@1 {
-		target = <&i2c2>;
+		target = <&sai3>;
 		__overlay__ {
-			clock-frequency = <100000>;
 			pinctrl-names = "default";
-			pinctrl-0 = <&pinctrl_i2c2>;
-			status = "okay";
-		};
-	};
-
-	fragment@2 {
-		target = <&i2c3>;
-		__overlay__ {
-			clock-frequency = <100000>;
-			pinctrl-names = "default";
-			pinctrl-0 = <&pinctrl_i2c3>;
+			pinctrl-0 = <&pinctrl_sai3>;
+			assigned-clocks = <&clk IMX8MN_CLK_SAI3>;
+			assigned-clock-parents = <&clk IMX8MN_AUDIO_PLL1_OUT>;
+			assigned-clock-rates = <24576000>;
 			status = "okay";
 		};
 	};
