--- a/arch/arm64/boot/dts/freescale/overlays/maaxboard-nano-ext-uart4.dts
+++ b/arch/arm64/boot/dts/freescale/overlays/maaxboard-nano-ext-uart4.dts
@@ -29,8 +29,8 @@
 			imx8mq-evk {
 				pinctrl_uart4: uart4grp {
 					fsl,pins = <
-						MX8MN_IOMUXC_UART4_TXD_UART4_DCE_TX		0x140
-						MX8MN_IOMUXC_UART4_RXD_UART4_DCE_RX		0x140
+						MX8MN_IOMUXC_UART4_RXD_UART4_DCE_RX    0x140 /* PIN 16,  GPIO5_IO28 */
+						MX8MN_IOMUXC_UART4_TXD_UART4_DCE_TX    0x140 /* PIN 18,  GPIO5_IO29 */
 					>;
 				};
 			};
