WIFI:DTS:MaaXBoard-Nano: Reduce clock speed of the SDIO bus
	Set the maximum frequency to limit the clock speed of the bus

Signed-off-by: Nick <nick.cheng@avnet.com>

--- a/arch/arm64/boot/dts/freescale/maaxboard-nano.dtsi
+++ b/arch/arm64/boot/dts/freescale/maaxboard-nano.dtsi
@@ -554,6 +554,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc1>;
 	/delete-property/ cd-gpios;
+	max-frequency = <25000000>;
 	pm-ignore-notify;
 	keep-power-in-suspend;
 	non-removable;
